# clustrix

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AWS_EKS_TEST_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  COVERAGE_TODO.md  FINAL_GPU_VERIFICATION_SUMMARY.md  GPU_PARALLELIZATION_DESIGN.md  GPU_TESTING_RESULTS.md  ISSUE_58_IMPLEMENTATION_SUMMARY.md  ISSUE_74_CONTENT_PRESERVATION_REPORT.md  MIGRATION.md  README.md  REAL_WORLD_GPU_TESTING_RESULTS.md  TEST_STATUS.md  add_eks_user_policy.sh  aws_permission_requirements.md  aws_testing_progress.md  check_python_versions.py  check_remote_logs.py  check_slurm_results.py  check_tensor01_status.py  cleanup_test_resources.py  cloud_provider_audit_report.md  colab_test_modern_widget.ipynb  debug_cluster_execution.py  debug_cluster_test.py  debug_slurm_logs.py  debug_venv2_execution.py  destroy_cluster.py  eks_user_policy.json  final_filesystem_test.sh  fix_notebooks.py  github_issue_57_status_update.md  github_issue_63_completion.md  github_issue_63_filesystem_integration_complete.md  github_issue_63_update.md  (+73 more)
.github/: pull_request_template.md
clustrix/: __init__.py  async_executor_simple.py  auth_fallbacks.py  auth_manager.py  auth_methods.py  auto_install.py  cli.py  cli_credentials.py  cloud_provider_manager.py  cloud_providers.py  config.py  cost_monitoring.py  credential_manager.py  decorator.py  dependency_analysis.py  dependency_resolution.py  enhanced_notebook_widget.py  executor.py  executor_cloud.py  executor_connections.py  executor_core.py  executor_kubernetes.py  executor_scheduler_status.py  executor_schedulers.py  field_mappings.py  file_packaging.py  filesystem.py  function_flattening.py  gpu_utils.py  kerberos_auth.py  local_executor.py  loop_analysis.py  modern_notebook_widget.py  notebook_magic.py  notebook_magic_backup.py  notebook_magic_config.py  notebook_magic_core.py  notebook_magic_mocks.py  notebook_magic_widget.py  profile_manager.py  (+5 more)
clustrix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: CREDENTIAL_SETUP.md  Makefile  PRICING_API_DEPLOYMENT.md  PRICING_API_REFERENCE.md  PRICING_USER_GUIDE.md  REAL_CLUSTER_JOB_TESTING.md  REAL_WORLD_TESTING.md  TECHNICAL_DESIGN_AUTH_ENHANCEMENT.md  TECHNICAL_DESIGN_IMPLEMENTATION_SUMMARY.md  function_serialization_technical_design.md  github_issue_66_summary.md  issue_71_implementation_summary.md  kubernetes_testing.md  migration_to_real_tests.md  requirements.txt  ssh_key_automation_github_comment.md  ssh_key_automation_technical_design.md  ssh_key_automation_tutorial.ipynb  ssh_key_automation_tutorial.md  testing_guidelines.md
examples/: filesystem_tutorial.py
notes/: 1password_credential_integration_complete.md  2025-06-30-issue-58-pricing-api-implementation.md  2025-07-01-dependency-resolution-complete-success.md  2025-07-01-dependency-resolution-system-complete.md  2025-07-01-final-progress-comprehensive-report.md  2025-07-01-notes-and-issues-review.md  2025-07-01-phase-1-completion.md  2025-07-01-python36-compatibility-fix-success.md  2025-07-01-session-completion-comprehensive.md  2025-07-01-shared-filesystem-fix-complete-success.md  2025-07-01-technical-design-implementation-complete.md  2025-07-02-comprehensive-widget-testing-complete.md  2025-07-02-modern-widget-implementation-complete.md  2025-07-11-real-world-testing-completion.md  2025-07-12-cluster-testing-implementation-complete.md  2025-07-12-comprehensive-session-status.md  2025-07-12-conda-integration-success.md  2025-07-12-conda-pytorch-cuda-implementation.md  2025-07-12-pytorch-cuda-success-analysis.md  all_checks_status.csv  build_system_modernization_2025-06-29.md  comprehensive_session_summary_2025-06-25.md  credential_manager_update_complete.md  current_status_2025-06-25.md  development_session_2025-06-25.md  documentation_fixes_status.csv  documentation_polish_session_2025-06-26.md  edge_cases_and_enhancements_2025-06-26.md  external-validation-plan.md  final_breakthrough_2025-06-25.md  function_serialization_limitations.md  function_serialization_technical_design.md  github-issues-status-update.md  github_actions_timeout_fix_2025-06-29.md  github_issues_to_create.md  guide_text_conversion_session_2025-06-26.md  issue_58_completion_notes.md  notebook_validation_and_fixes_2025-06-26.md  phase2_kerberos_testing_results.md  real_cluster_job_testing_complete.md  (+18 more)
scripts/: README.md  auto_format_and_check.py  check_error_pickle.py  check_quality.py  check_recent_job.py  check_slurm_logs.py  debug_huggingface_auth.py  debug_ndoli_environment.py  debug_slurm_jobs.py  debug_slurm_output_location.py  fix_notebooks.py  (+32 more)
(+392 files in other folders)
